@@ -1342,7 +1342,7 @@
 //-- NC_SHAPESHIFT
 2268,3000,2000,0,0,300000,0
 //-- NC_INFRAREDSCAN
-2270,1000,500,15000,0,10000,0
+2270,1000,500,15000,0,10000,0,1000
 //-- NC_ANALYZE
 2271,1000,1000,0,0,20000,0,1000
 //-- NC_REPAIR
@@ -1533,7 +1533,7 @@
 //-- SO_STRIKING
 2451,1000,1000,2000,0,60000,0
 //-- SO_WARMER
-2452,2000,1000,60000,0,10000:15000;20000:25000:30000,60000
+2452,2000,1000,60000,0,60000,0
 //-- SO_VACUUM_EXTREME
 2453,2000,1000,5000,0,4000:6000:8000:10000:12000,1000
 //-- SO_VARETYR_SPEAR
