@@ -1143,15 +1143,15 @@
 // Sorcerer
 2443,0,6,4,3,0,0,5,-1,yes,0,0,0,magic,0,		SO_FIREWALK,Fire Walk
 2444,0,6,4,4,0,0,5,-1,yes,0,0,0,magic,0,		SO_ELECTRICWALK,Electric Walk
-2445,0,6,0,0,0x1,0,5,1,no,0,0,0,none,0,		SO_SPELLFIST,Spell Fist
+2445,0,6,0,0,0x1,0,5,1,no,0,0,0,none,0,			SO_SPELLFIST,Spell Fist
 2446,9,6,2,2,0,0,5,-1,yes,0,0,0,magic,0,		SO_EARTHGRAVE,Earth Grave
 2447,9,6,2,1,0,0,5,-1,yes,0,0,0,magic,0,		SO_DIAMONDDUST,Diamond Dust
 2448,9,6,1,5,0,0,5,-1,yes,0,0,0,magic,0,		SO_POISON_BUSTER,Poison Buster
-2449,9,8,2,0,0,0,5,-3:-4:-5:-6:-7,yes,0,0,0,magic,0,	SO_PSYCHIC_WAVE,Psychic Wave
-2450,9,6,2,0,0x1,0,5,-1,yes,0,0,1,magic,0,		SO_CLOUD_KILL,Cloud Kill
+2449,9,8,2,0,0,3:3:4:4:5,5,-3:-4:-5:-6:-7,yes,0,0,0,magic,0,	SO_PSYCHIC_WAVE,Psychic Wave
+2450,9,6,2,0,0x1,3,5,-1,yes,0,0,0,magic,0,		SO_CLOUD_KILL,Cloud Kill
 2451,9,6,16,0,0x1,0,5,1,yes,0,0,0,none,0,		SO_STRIKING,Striking
-2452,9,6,2,0,0,0,5,1,yes,0,0,0,magic,0,			SO_WARMER,Warmer
-2453,9,6,2,0,0,0,5,1,yes,0,0,0,magic,0,			SO_VACUUM_EXTREME,Vacuum Extreme
+2452,9,6,2,0,0x1,0,5,1,yes,0,0,0,magic,0,		SO_WARMER,Warmer
+2453,9,6,2,0,0x1,1:1:2:2:3,5,1,yes,0,0,0,magic,0,	SO_VACUUM_EXTREME,Vacuum Extreme
 2454,9,6,1,4,0x2,1:1:2:2:3,5,1,yes,0,0,0,magic,0,	SO_VARETYR_SPEAR,Varetyr Spear
 2455,9,6,1,0,0x3,1:1:2:2:3,5,1,yes,0,0,0,magic,0,	SO_ARRULLO,Arrullo
 2456,0,6,4,0,0x01,0,4,1,no,0,0,0,none,0,		SO_EL_CONTROL,Spirit Control
