@@ -510,19 +510,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\common\md5calc.c"
-				>
-			</File>
-			<File
-				RelativePath="..\src\common\md5calc.h"
-				>
-			</File>
-			<File
 				RelativePath="..\src\common\mapindex.c"
 				>
 			</File>
 			<File
 				RelativePath="..\src\common\mapindex.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\common\md5calc.c"
+				>
+			</File>
+			<File
+				RelativePath="..\src\common\md5calc.h"
 				>
 			</File>
 			<File
